<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:statusBarBackground="@android:color/transparent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="8dp"
            app:expandedTitleMarginTop="322dp"
            app:expandedTitleTextAppearance="@style/ToolbarTitle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <!-- TODO Черные полосы при резком разворачивании  -->
            <ImageView
                android:id="@+id/image_launch_details_v1_patch"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/all_mission_patch"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.75"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="316dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="40dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/text_launch_details_v1_launch_date"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    tools:text="31/06/2019 22:30"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/text_launch_details_v1_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    tools:text="Rocket name: Falcon 1\nRocket Type: Merlin 1"
                    tools:visibility="visible" />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_launch_details_v1"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                tools:title="Starlink 1" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressbar_launch_details_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/text_launch_details_v1_resources"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/all_resources" />

            <TextView
                android:id="@+id/text_launch_details_v1_stub_resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/all_no_resources_available"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_launch_details_v1_links"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                tools:text="Reddit\nYouTube\nWikipedia\nArticle"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_launch_details_v1_images"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/all_images" />

            <TextView
                android:id="@+id/text_launch_details_v1_stub_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/all_no_images_available"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_launch_details_v1_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingBottom="8dp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>